kubernetes/nextcloud.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nextcloud
  labels:
    name: nextcloud
spec:
  containers:
  - name: nextcloud
    image: nextcloud
    ports:
    - name: nextcloud
      containerPort: 80
      protocol: TCP
    volumeMounts:
    - mountPath: /var/www/html/data
      name: nextcloud-data
    livenessProbe:
      tcpSocket:
        port: 80
      initialDelaySeconds: 60
      timeoutSeconds: 1
  volumes:
  - name: nextcloud-data
    emptyDir: {}
