kubernetes/postgresql.yaml
apiVersion: v1
kind: Pod
metadata:
  name: postgresql
  labels:
    name: postgresql
spec:
  containers:
  - name: postgresql
    image: postgres
    ports:
    - containerPort: 5432
      protocol: TCP
    volumeMounts:
    - mountPath: /var/lib/postgresql
      name: postgres-data
    livenessProbe:
      tcpSocket:
        port: 5432
      initialDelaySeconds: 500
      timeoutSeconds: 5
  volumes:
  - name: postgres-data
    emptyDir: {}
