kubernetes/nextcloud-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  labels:
    name: nextcloud
spec:
  ports:
  - name: nextcloud
    port: 9000
    targetPort: 9000
    nodePort: 32275
    protocol: TCP
  selector:
    name: nextcloud
  type: NodePort
---
