kubernetes/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  labels:
    name: postgresql
spec:
  ports:
  - port: 5432
    targetPort: 5432
    protocol: TCP
  selector:
    name: postgresql
---
